fixing minor contrast issue

--- a/styles/section-shop-image-text.scss
+++ b/styles/section-shop-image-text.scss
@@ -212,6 +212,7 @@
 }
 
 .shop-image-with-text__text p {
+  color: #265979;
   margin-bottom: 1rem;
   margin-top: 0;
 }
